# bn254

./: .gitignore
signer_arkworks/: Cargo.toml
signer_arkworks/src/: hash.rs  lib.rs  tests.rs  types.rs  utils.rs
signer_typescript_bindings/: Cargo.toml
signer_typescript_bindings/src/: lib.rs
verifier_noir/: Nargo.toml
verifier_noir/src/: lib.nr
verifier_noir/src/tests/: mod.nr
verifier_noir/src/utils/: mod.nr
