[package]
name = "plume_bn254"
version = "0.0.0"
edition = "2024"

[dependencies]
bn254_blackbox_solver = {git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3"}
acvm_blackbox_solver = {git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3"}
acir_field = {git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.3"}

ark-bn254 = "*"
ark-ff = "*"
ark-ec = "*"

ark-grumpkin = "*"
# num-bigint = "*"

zeroize = "^1.8.1"